--- a/basic/pom.xml
+++ b/basic/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>amqp</module>
+        <module>barrier</module>
     </modules>
 
     <properties>
